<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="cost_of_food">Cost of food</string>
    <string name="tip_percent">Tip Percent</string>
    <string name="tipAmount">Tip Amount</string>
    <string name="tipAmountText">0.00</string>
    <string name="totalAmountString">Total Amount:</string>
    <string name="totalAmount">0.00</string>
    <string name="calculatebutton">Calculate</string>


</resources>